--- a/_posts/2019-12-13-01.md
+++ b/_posts/2019-12-13-01.md
@@ -11,8 +11,8 @@ tags:
 typora-root-url: ..\img
 ---
 
-### 智乎：智分享有价值的信息！
+#### 智乎：智分享有价值的信息！
 
-### 使用人工智慧分享有价值的信息！
+#### 使用人工智慧分享有价值的信息！
 
-欢迎收藏  [智乎网站](http://zhihu.news/)
+#### 欢迎收藏  [智乎网站](http://zhihu.news/)
