--- a/_posts/2019-12-12-01.md
+++ b/_posts/2019-12-12-01.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      多吉搜索：没有广告的搜索引擎
+title:      多吉搜索：没有广告的搜索引擎--智乎
 subtitle:   多吉搜索
 date:       2019-12-14
 author:     0
